--- a/config-server.properties
+++ b/config-server.properties
@@ -1,12 +1,3 @@
-server.port=9296
-
-
-
-spring.application.name=CONFIG-SERVER
-
-spring.cloud.config.server.git.uri=https://github.com/shh3na/micro-config
-
-
 
 eureka.instance.prefer-ip-address=true
 
@@ -14,4 +5,4 @@ eureka.client.fetch-registry=true
 
 eureka.client.register-with-eureka=true
 
-eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone  =${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka/}
